# KinematicsLab

./: .gitattributes  .gitignore  CMakeLists.txt  main.cpp  system
src/core/: Application.cpp  Application.h  ImGuiManager.cpp  ImGuiManager.h  Renderer.cpp  Renderer.h  WindowManager.cpp  WindowManager.h
src/physics/: Body.cpp  Body.h  GroundPoint.cpp  GroundPoint.h  PhysicsEngine.cpp  PhysicsEngine.h
src/shader/: Shader.h
